<resources>
    <string name="app_name">Logica App</string>
    <string name="txtHeading">Conjunction (AND)</string>
    <string name="txtTitleFirstRow">A</string>
    <string name="txtTitleSecondRow">B</string>
    <string name="txtTitleResult">A^B</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="titleFirstColumn">A</string>
    <string name="titleSecondColumn">B</string>
    <string name="True">T</string>
    <string name="False">F</string>
</resources>
