<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaActivity">

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtHeading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleFirstColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/titleFirstColumn"
        app:layout_constraintEnd_toStartOf="@+id/titleSecondColumn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleSecondColumn" />

    <TextView
        android:id="@+id/titleSecondColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/titleSecondColumn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleApp" />

    <TextView
        android:id="@+id/txtLeftCase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:text="@string/True"
        app:layout_constraintEnd_toStartOf="@+id/txtRightCase1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleFirstColumn"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase1" />

    <TextView
        android:id="@+id/txtRightCase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/True"
        app:layout_constraintEnd_toEndOf="@+id/titleSecondColumn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/titleSecondColumn"
        app:layout_constraintTop_toBottomOf="@+id/titleSecondColumn" />

    <TextView
        android:id="@+id/txtLeftCase2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/True"
        app:layout_constraintEnd_toStartOf="@+id/txtRightCase2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLeftCase1"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase2" />

    <TextView
        android:id="@+id/txtRightCase2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/False"
        app:layout_constraintEnd_toEndOf="@+id/txtRightCase1"
        app:layout_constraintStart_toStartOf="@+id/txtRightCase1"
        app:layout_constraintTop_toBottomOf="@+id/txtRightCase1" />

    <TextView
        android:id="@+id/txtLeftCase3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:text="@string/False"
        app:layout_constraintEnd_toStartOf="@+id/txtRightCase3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLeftCase2"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase3" />

    <TextView
        android:id="@+id/txtRightCase3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/True"
        app:layout_constraintEnd_toEndOf="@+id/txtRightCase2"
        app:layout_constraintStart_toStartOf="@+id/txtRightCase2"
        app:layout_constraintTop_toBottomOf="@+id/txtRightCase2" />

    <EditText
        android:id="@+id/editTextCase1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:digits="TF"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="@+id/titleResult"
        app:layout_constraintStart_toEndOf="@+id/txtRightCase1"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase1" />

    <EditText
        android:id="@+id/editTextCase2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:digits="TF"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="@+id/editTextCase1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtRightCase2"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase2" />

    <EditText
        android:id="@+id/editTextCase3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:digits="TF"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="@+id/editTextCase2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtRightCase3"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase3" />

    <TextView
        android:id="@+id/titleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/txtTitleResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/titleSecondColumn"
        app:layout_constraintTop_toTopOf="@+id/titleSecondColumn" />

    <TextView
        android:id="@+id/txtLeftCase4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/False"
        app:layout_constraintEnd_toStartOf="@+id/txtRightCase4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLeftCase3"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase4" />

    <TextView
        android:id="@+id/txtRightCase4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/False"
        app:layout_constraintEnd_toEndOf="@+id/txtRightCase3"
        app:layout_constraintStart_toStartOf="@+id/txtRightCase3"
        app:layout_constraintTop_toBottomOf="@+id/txtRightCase3" />

    <EditText
        android:id="@+id/editTextCase4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:digits="TF"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="@+id/editTextCase3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtRightCase4"
        app:layout_constraintTop_toTopOf="@+id/txtRightCase4" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRightCase4" />

</androidx.constraintlayout.widget.ConstraintLayout>